--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,54 @@
 			<version>3.8.1</version>
 		</dependency>
 
-
-
-
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+
+
+					<includes>
+						<include>**/*SpritloginRunner.java</include>
+					</includes>
+					<testFailureIgnore>true</testFailureIgnore>
+
+
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>net.masterthought</groupId>
+				<artifactId>maven-cucumber-reporting</artifactId>
+				<version>5.0.0</version>
+				<executions>
+					<execution>
+						<id>execution</id>
+						<phase>test</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<projectName>HRMSCucumber</projectName>
+
+							<!-- output directory for the generated report -->
+							<outputDirectory>${project.build.directory}</outputDirectory>          <!-- // palce of report we can chance place like that target file -->
+							<!-- optional, defaults to outputDirectory if not specified -->
+							<inputDirectory>${project.build.directory}</inputDirectory>          <!-- // json file place we can specify -->
+							<jsonFiles>
+								<!-- supports wildcard or name pattern -->
+								<param>**/*.json</param>
+							</jsonFiles>
+
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
