--- a/src/test/resources/configs/configuration.properties
+++ b/src/test/resources/configs/configuration.properties
@@ -30,4 +30,5 @@ username=Admin
 password=Hum@nhrm123
 dbUsername=syntax_hrm
 dbPassword=syntaxhrm123
-dbUrl=jdbc:MySQL://166.62.36.207:3306/syntaxhrm_mysql
+dbUrl=jdbc:mysql://166.62.36.207:3306/syntaxhrm_mysql
+headless=true;
