--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 
 
 					<includes>
-						<include>**/*ModifyRunner.java</include>
+						<include>**/*RegressionRunner.java</include>
 					</includes>
 					<testFailureIgnore>true</testFailureIgnore>
 
